<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mah.af2015.dinekonomi.MainActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/title"
        android:textIsSelectable="false"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:allowUndo="true"
        android:imeOptions="actionDone"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:enabled="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amount"
        android:textIsSelectable="false"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:allowUndo="true"
        android:imeOptions="actionDone"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:enabled="true" />

    <TextView
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_income" />

        <RadioButton
            android:text="@string/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_expense" />
    </RadioGroup>

    <TextView
        android:text="@string/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="36dp"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_toEndOf="@+id/radioGroup" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_alignStart="@+id/textView3"
        android:id="@+id/category"
        android:layout_below="@+id/textView3"
        android:spinnerMode="dialog"/>

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/date"
        android:textIsSelectable="false"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:allowUndo="true"
        android:imeOptions="actionDone"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:enabled="true" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_add"
        android:background="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
