<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.mah.af2015.dinekonomi.LoginActivity"
    android:padding="10dp"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/login_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal_identity"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_continue"
                android:background="@color/colorPrimary" />

            <TextView
                android:text="@string/social_identity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_id"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/logo"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/personal_identity"
                android:textIsSelectable="false"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:allowUndo="true"
                android:imeOptions="actionDone"
                android:layout_below="@+id/tv_id"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:background="@drawable/ic_logo"
                android:contentDescription="@string/logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
